tests/error/return_out.gw
#! [contains] 'return' statement found outside function definition
return;
